--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,21 +6,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Você decide o futuro da IA </title>
+    <title> fuja ou seja um porquinho </title>
 </head>
 
 <body>
     <div class="caixa-principal">
-        <h1> voce decide o futuro da IA</h1>
+        <h1>Você nao quer ser feito de porco não é??</h1>
         <div class="tela-inicial">
-    <p>   aqui tem que fazer o tema </p>
-    <button class="iniciar-btn">iniciar</button>
+            <p> no dia 15 de julho de 2010 voce acorda em um quarto escuro amarrado e pelado e na sua frente voce ve uma carta e uma faca 
+                e a carta diz 'você foi sequestrado por mim juninho mata porco na pikada e em torno de 40 minutos eu voltarei para esse quarto
+                e se você ainda estiver ai vou te usar de porquinho 😈'.
+                objetivo: fugir do juninho antes que ele volte 
+            </p>
+            <button class="iniciar-btn">Iniciar</button>
         </div>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
-        <div class="caixa-resultados">
+        <div class="caixa-resultado">
             <p class="texto-resultado"></p>
-            <button class="novamente-btn">jogar novamente</button>
+            <button class="novamente-btn">Jogar novamente</button>
         </div>
     </div>
     <script type="module" src="js/aleatorio.js"></script>
